Added double click (left and right) WORKING VERSION

--- a/Chrome Version/Minesweeper.html
+++ b/Chrome Version/Minesweeper.html
@@ -52,7 +52,7 @@
 		}
 
 		.button > [dataset-status='hidden'] {
-			background-color: ##FF0000;
+			background-color: #FF0000;
 			cursor: not-allowed;
 			pointer-events: none;
 		}
